--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,11 +1,31 @@
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>Example App</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css" />
+    <title>Where to Eat</title>
   </head>
   <body>
+    <header>
+      <!-- navigation -->
+      <nav class="navbar navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="/">
+            <img
+              src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
+              width="30"
+              height="30"
+              class="d-inline-block align-top"
+              alt="我的餐廳清單"
+            />
+            我的餐廳清單
+          </a>
+        </div>
+      </nav>
 
+      <div class="banner"></div>
+    </header>
     {{{body}}}
-
+    <script src="/javascripts/bootsrap.bundle.min.js"></script>
   </body>
 </html>
