--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -27,5 +27,9 @@
     </header>
     {{{body}}}
     <script src="/javascripts/bootsrap.bundle.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/2245a76d1b.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
